[gd_scene load_steps=4 format=3 uid="uid://b7gl23jy6jhi3"]

[ext_resource type="Texture2D" uid="uid://c1ldygf25cfae" path="res://assets/sprites/items/weapons/assult-rifle.png" id="1_2ou6w"]
[ext_resource type="Texture2D" uid="uid://bs887m54op843" path="res://assets/sprites/PostApocalypsePack/UI/Inventory/Inventory-Cell.png" id="2_lien8"]
[ext_resource type="Script" uid="uid://triwigjywcif" path="res://scripts/ui/EquipedWeaponUI.gd" id="3_script"]

[node name="EquipedWeaponUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1462.0
offset_top = 47.0
offset_right = 1517.0
offset_bottom = 87.0
scale = Vector2(6.42289, 3.11535)

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="WeaponIcon" type="TextureRect" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_2ou6w")
stretch_mode = 2

[node name="AmmoSlot" type="TextureRect" parent="PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_lien8")

[node name="AmmoButton" type="Button" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Select Ammo"
